# up-symk

./: README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
notebooks/: axioms_usage.ipynb  symk_osp_usage.ipynb  symk_usage.ipynb
up_symk/: __init__.py  _custom_build.py  symk.py  symk_base.py
